k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-webapp
  labels:
    app: my-webapp
spec:
  type: ClusterIP
  selector:
    app: my-webapp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
